--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script src="./Zuritask1.js"></script>
+    <script src="Zuritask1.js"></script>
 </body>
 </html>
